--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -2,15 +2,15 @@
 # http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  driver: 
-  coach: 
-  route: MyString
-  start_time: 2015-03-20 14:44:43
-  end_time: 2015-03-20 14:44:43
+  driver: david
+  coach: train_two
+  route: Central Link
+  start_time: 2015-03-20 12:00:00
+  end_time: 2015-03-20 18:00:00
 
 two:
-  driver: 
-  coach: 
-  route: MyString
-  start_time: 2015-03-20 14:44:43
-  end_time: 2015-03-20 14:44:43
+  driver: stephen
+  coach: bus_one
+  route: 219
+  start_time: 2015-03-20 08:00:00
+  end_time: 2015-03-20 16:00:00
